--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       text-align: center;
       margin: 0;
       padding: 0;
+      height: 90vh;
     }
 
     h1, h2 {
@@ -72,6 +73,32 @@
       margin-top: 20px;
       font-size: 20px;
     }
+    #ad-overlay {
+      height: 290px;
+      width: 300px;
+      position: absolute;
+      background-color: white;
+      margin: auto;
+      display: none;
+      transform: translate(-50%, -50%);
+      top: 25%;
+      left: 50%;
+
+      #close-start-btn {
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+
+      p {
+        color: #000000;
+        font-size: 13px;
+        position: absolute;
+        bottom: -16px;
+        left: 0;
+        padding: 5px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -111,11 +138,29 @@
   <div id="gameOver" class="hidden">
     <h2>❌ Game Over!</h2>
     <p>Oops! Wrong color. Try again?</p>
-    <button class="btn" onclick="startGame()">🔁 Restart</button>
+    <button class="btn" onclick="restartGame()">🔁 Restart</button>
     <button class="btn" onclick="showPage('home')">⬅ Back to Home</button>
   </div>
 
+  <div id="ad-overlay">
+    <button id="close-start-btn">X</button>
+    <p>Visiting this small ad helps us to grow and update. Thanks for your support! 💖</p>
+    <!-- Adsterra Ads Code -->
+    <script type="text/javascript">
+        atOptions = {
+          'key' : '15cd165eb5c6f2b40807bacca76d739c',
+          'format' : 'iframe',
+          'height' : 250,
+          'width' : 300,
+          'params' : {}
+        };
+      </script>
+      <script type="text/javascript" src="//www.highperformanceformat.com/15cd165eb5c6f2b40807bacca76d739c/invoke.js"></script>
+  </div>
+
   <script>
+    const adoverlay = document.getElementById('ad-overlay');
+    const closeBtn = document.getElementById('close-start-btn');
     const colors = ['red', 'green', 'blue', 'yellow', 'purple', 'cyan'];
     let gamePattern = [];
     let userPattern = [];
@@ -123,6 +168,12 @@
     let acceptingInput = false;
 
     function showPage(pageId) {
+      document.querySelectorAll('#home, #howToPlay, #game, #gameOver').forEach(div => {
+        div.classList.add('hidden');
+      });
+      document.getElementById(pageId).classList.remove('hidden');
+    }
+    function realShowPage(pageId) {
       document.querySelectorAll('#home, #howToPlay, #game, #gameOver').forEach(div => {
         div.classList.add('hidden');
       });
@@ -136,6 +187,18 @@
       level = 0;
       nextSequence();
     }
+    function restartGame() {
+        adoverlay.style.display = 'block';
+    }
+    function realStartGame() {
+        adoverlay.style.display = 'none';
+      showPage('game');
+      gamePattern = [];
+      userPattern = [];
+      level = 0;
+      nextSequence();
+    }
+    closeBtn.addEventListener('click', realStartGame);
 
     function nextSequence() {
       userPattern = [];
